# vibe-judges

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 00_preprocessing_raw_data.ipynb  01_summary_agent.ipynb  02_mcp_agent.ipynb  03_react_agent.ipynb  client.py  simple-graph.ipynb
preprocessing/: common.py  courts.py  documents.py  judges.py
studio/: langgraph.json
